fixing white space

--- a/css/main.css
+++ b/css/main.css
@@ -477,6 +477,7 @@ h6 {
 @media only screen and (max-width: 28.12em) {
   .footer__form {
     width: 100%;
+    margin-right: 0;
   }
 }
 
